<resources>
    <string name="app_name">Brittle Pins</string>
    <string name="log_in_button_label">Log in</string>
    <string name="sign_up_button_label">Sign up</string>
    <string name="title_activity_main_nav">MainActivity</string>
    <string name="title_projects">Projects</string>
    <string name="title_boards">Boards</string>
    <string name="title_components">Components</string>
    <string name="title_public">Public</string>
    <string name="title_settings">Settings</string>
    <string name="log_in_username_hint">Username or email</string>
    <string name="log_in_password_hint">Password</string>
</resources>
